# C-_rule_of_five

./: CMakeLists.txt  Main.cpp  README.md
src/: CMakeLists.txt  MyVector.cpp
tests/: CMakeLists.txt  Tests.cpp
